--- a/Index.html
+++ b/Index.html
@@ -441,8 +441,8 @@
                 <p>CSS animated effect.</p>
             </div>
             <div class="card">
-                <h3></h3>
-                <p></p>
+                <h3>YouTube Mp3 converter</h3>
+                <p>Converts youtube videos into Mp3 using API Keys</p>
             </div>
         </div>
     </section>
